samples/_failures_safe/1761669144_c1b2f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b05ec944.c: In function ‘main’:
./samples/SAFE/__tmp_b05ec944.c:165:42: error: expected ‘)’ at end of input
  165 |                 state_process_number(&ctx
      |                                     ~    ^
      |                                          )
./samples/SAFE/__tmp_b05ec944.c:165:17: error: expected declaration or statement at end of input
  165 |                 state_process_number(&ctx
      |                 ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b05ec944.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b05ec944.c:165:17: error: expected declaration or statement at end of input
